Fixed collapsible menus

--- a/public/index.html
+++ b/public/index.html
@@ -64,15 +64,13 @@
         height: 0;
         float: left;
         margin-right: 10px;
-        border-top: 5px solid transparent;
+  /*      border-top: 5px solid transparent;
         border-bottom: 5px solid transparent;
         border-left: 5px solid #1faaf2;
-
-/*
+*/
         border-left: 5px solid transparent;
         border-right: 5px solid transparent;
         border-top: 5px solid #1faaf2;
-*/
       }
       .collapsible.collapsed .static .button {
       }
