--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <title>Cube</title>
     <meta name="description" content="Cube">
     <script src="../node_modules/aframe/build/aframe.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <a-scene debug="true">
@@ -54,7 +53,7 @@
           position="0 0 0"></a-entity>
 
     </a-scene>
-    <script src="bundle.js"></script>
-    <div id="app"></div>
+<!--    <script src="bundle.js"></script>
+    <div id="app"></div>-->
   </body>
 </html>
