Scenegraph react to selection in scene

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
           position="0 0 0"></a-entity>
 
     </a-scene>
-<!--    <script src="bundle.js"></script>
-    <div id="app"></div>-->
+    <script src="bundle.js"></script>
+    <div id="app"></div>
   </body>
 </html>
