--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <a-mixin id="yellow" material="color: #FFC65D"></a-mixin>
         <img id="crateimg" src="assets/textures/crate.gif">
         <img id="floorimg" src="assets/textures/grasslight-big.jpg">
-
+        <img id="floorimg2" src="assets/textures/grasslight-big.jpg">
       </a-assets>
       <a-entity position="0 1 8">
         <a-entity camera look-controls wasd-controls>
