--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
               </a-entity>
         </a-entity>
       </a-entity>
-      <a-entity mixin="short orange cube" position="-5 2 0"></a-entity>
-      <a-entity mixin="short yellow cube" position="5 2 0">
+      <a-entity id="short_orange_cube" mixin="short orange cube" position="-5 2 0"></a-entity>
+      <a-entity id="short_yellow_cube" mixin="short yellow cube" position="5 2 0">
 <!--        <a-event name="click" target="#target" scale="1.5 1.5 1.5"></a-event>
         <a-event name="click" scale="1.5 1.5 1.5"></a-event>-->
       </a-entity>
