Collapsible component refactored

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
           position="0 0 0"></a-entity>
 
     </a-scene>
-    <script src="../build/aframe-editor.js"></script>
+    <script src="../dist/aframe-editor.js"></script>
     <div id="app"></div>
   </body>
 </html>
