update <title> of example

--- a/example/index.html
+++ b/example/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Cube</title>
-    <meta name="description" content="Cube">
+    <title>My Scene</title>
     <script src="js/aframe.js"></script>
   </head>
   <body>
