Fixes #98 disable stats when editor opens

--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,7 @@
     <script src="js/aframe.js"></script>
   </head>
   <body>
-    <a-scene debug="true">
+    <a-scene debug="true" stats>
       <a-assets>
         <a-mixin id="spin" attribute="rotation" to="0 360 0" repeat="indefinite" easing="linear" dur="9600"></a-mixin>
         <a-mixin id="blue" material="color: #4CC3D9"></a-mixin>
