enable HMR (hot module replacement) (fixes #120)

--- a/example/index.html
+++ b/example/index.html
@@ -55,6 +55,7 @@
           position="0 0 0">
       </a-entity>
     </a-scene>
-    <script src="../build/aframe-editor.js"></script>
+
+    <script src="http://localhost:3333/build/aframe-editor.js"></script>
   </body>
 </html>
