Added uploadcare functionality

--- a/example/index.html
+++ b/example/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Example Scene</title>
     <script src="js/aframe-master.js"></script>
+    <script>UPLOADCARE_PUBLIC_KEY = "f43ad452b58f9e853d05";</script>
+    <script src="https://ucarecdn.com/widget/2.10.0/uploadcare/uploadcare.full.min.js" charset="utf-8"></script>
+    <script src="js/aframe.min.js"></script>
   </head>
   <body>
     <a-scene debug="true">
@@ -18,7 +21,8 @@
         <a-mixin id="short" scale="1 0.5 1"></a-mixin>
         <a-mixin id="yellow" material="color: #FFC65D"></a-mixin>
         <img id="crateImg" src="assets/textures/crate.gif">
-        <img id="floorImg" src="assets/textures/grasslight-big.jpg">
+        <!--<img id="floorImg" src="assets/textures/grasslight-big.jpg">-->
+        <!--<img id="floorImg" src="https://ucarecdn.com/a114816f-b84f-4b79-b44c-c98592aae6d9/" crossOrigin="anonymous">-->
       </a-assets>
 
       <!-- Meshes. -->
