Improved texture dialog workflow

--- a/example/index.html
+++ b/example/index.html
@@ -21,8 +21,7 @@
         <a-mixin id="short" scale="1 0.5 1"></a-mixin>
         <a-mixin id="yellow" material="color: #FFC65D"></a-mixin>
         <img id="crateImg" src="assets/textures/crate.gif">
-        <!--<img id="floorImg" src="assets/textures/grasslight-big.jpg">-->
-        <!--<img id="floorImg" src="https://ucarecdn.com/a114816f-b84f-4b79-b44c-c98592aae6d9/" crossOrigin="anonymous">-->
+        <img id="floorImg" src="assets/textures/grasslight-big.jpg">
       </a-assets>
 
       <!-- Meshes. -->
