Fix #170 webpack accesible outside localhost

--- a/example/index.html
+++ b/example/index.html
@@ -58,6 +58,6 @@
       <a-sky color="#333"></a-sky>
     </a-scene>
 
-    <script src="http://localhost:3333/build/aframe-inspector.js"></script>
+    <script src="../build/aframe-inspector.js"></script>
   </body>
 </html>
