Fix #320 force zoom:reset on a-scene canvas

--- a/example/embedded-zoom.html
+++ b/example/embedded-zoom.html
@@ -21,7 +21,7 @@
   <body>
     <div style="bottom: 0; left: 0; margin: 0 auto; right: 0; position: absolute; top: 0; width: 960px; zoom: 1.1">
       <div style="height: 480px; width: 640px">
-        <a-scene embedded inspector="url: ../build/aframe-inspector.js">
+        <a-scene embedded inspector="url: ../dist/aframe-inspector.js">
           <a-assets>
             <a-mixin id="blue" material="color: #4CC3D9"></a-mixin>
             <a-mixin id="blueBox" geometry="primitive: box; depth: 2; height: 5; width: 1" material="color: #4CC3D9"></a-mixin>
