--- a/example/embedded.html
+++ b/example/embedded.html
@@ -24,7 +24,7 @@
     </style>
   </head>
   <body>
-    <a-scene embedded inspector="url: ../build/aframe-inspector.js">
+    <a-scene embedded inspector="url: ../dist/aframe-inspector.js">
       <a-assets>
         <a-mixin id="blue" material="color: #4CC3D9"></a-mixin>
         <a-mixin id="blueBox" geometry="primitive: box; depth: 2; height: 5; width: 1" material="color: #4CC3D9"></a-mixin>
