--- a/example/colors.html
+++ b/example/colors.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Example Scene</title>
-    <script src="js/aframe.min.js"></script>
+    <script src="js/aframe.master.js"></script>
   </head>
   <body>
     <a-scene debug="true">
@@ -13,7 +13,6 @@
       <a-entity id="hex6-red" geometry="primitive: box" material="color:#ff0000" position="2 1 0"></a-entity>
       <a-entity id="string-blue" geometry="primitive: box" material="color:blue" position="4 1 0"></a-entity>
     </a-scene>
-
     <script src="../dist/aframe-inspector.js"></script>
   </body>
 </html>
