--- a/example/empty.html
+++ b/example/empty.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Example Scene</title>
-    <script src="js/aframe.master.js"></script>
+    <script src="js/aframe-master.js"></script>
   </head>
   <body>
     <a-scene stats>
