Fixes #145 add icon to toggle visibility and modify scenegraph style

--- a/example/index.html
+++ b/example/index.html
@@ -33,8 +33,8 @@
       <a-box id="box" position="0 2 0" height="2" color="#FFC65D"></a-box>
 
       <!-- Models. -->
-      <a-entity id="crate" geometry="primitive: box" material="src: #crateImg" position="3 4 0"></a-entity>
-      <a-entity id="greenBox" geometry="primitive: box" material="color: #0f0" position="4 2 4"></a-entity>
+      <a-entity geometry="primitive: box" material="src: #crateImg" position="3 4 0"></a-entity>
+      <a-entity geometry="primitive: box" material="color: #0f0" position="4 2 4"></a-entity>
 
       <!-- Floor. -->
       <a-entity id="floor" geometry="primitive: cylinder; height: .2; radius: 12"
