better grid and example sky color

--- a/example/index.html
+++ b/example/index.html
@@ -55,7 +55,7 @@
         </a-entity>
       </a-entity>
 
-      <a-sky color="#333"></a-sky>
+      <a-sky color="#3c3c3c"></a-sky>
     </a-scene>
 
     <script src="../dist/aframe-inspector.js"></script>
