--- a/example/colors.html
+++ b/example/colors.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Example Scene</title>
-    <script src="js/aframe-master.js"></script>
+    <script src="https://rawgit.com/aframevr/aframe/master/dist/aframe-master.min.js"></script>
   </head>
   <body>
     <a-scene debug="true">
