--- a/example/embedded.html
+++ b/example/embedded.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Inspector Test - Embedded</title>
-    <script src="js/aframe-master.js"></script>
+    <script src="https://rawgit.com/aframevr/aframe/master/dist/aframe-master.min.js"></script>
     <style>
       html,
       body {
