--- a/examples/index.html
+++ b/examples/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Example Scene</title>
     <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
-    <script src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.3.7/dist/aframe-environment-component.min.js"></script>
   </head>
   <body>
     <a-scene debug="true">
@@ -22,7 +22,7 @@
         <img id="floorImg" src="https://aframe.io/sample-assets/assets/images/terrain/grasslight-big.jpg" crossOrigin="true">
       </a-assets>
 
-      <a-entity id="environment" environment="preset: forest; fog: false"></a-entity>
+      <a-entity id="environment" environment="preset: forest; fog: 0"></a-entity>
 
       <!-- Meshes. -->
       <a-entity id="blueBox" mixin="blueBox" position="0 8 0"></a-entity>
