--- a/examples/index.html
+++ b/examples/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Example Scene</title>
+    <!--<script>window.AFRAME_SAMPLE_ASSETS_ROOT = "./sample-assets/";</script>-->
     <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.3.7/dist/aframe-environment-component.min.js"></script>
   </head>
