Be sure an entity doesn't use the same id as a mixin in the examples

--- a/examples/embedded.html
+++ b/examples/embedded.html
@@ -40,7 +40,7 @@
       </a-assets>
 
       <!-- Meshes. -->
-      <a-entity id="blueBox" mixin="blueBox" position="0 8 0"></a-entity>
+      <a-entity id="aBlueBox" mixin="blueBox" position="0 8 0"></a-entity>
       <a-entity id="shortOrangeBox" mixin="short orange box" position="-5 2 0"></a-entity>
       <a-entity id="shortYellowBox" mixin="short yellow box" position="5 2 0"></a-entity>
       <a-entity id="redBox" geometry="primitive: box" material="color:#f00" position="-4 1 0">
@@ -48,7 +48,7 @@
       </a-entity>
       <a-entity id="yellowSphere" geometry="primitive: sphere" material="color:#ff0; metalness:0.0; roughness:1.0" position="-2 2 -2"></a-entity>
       <a-box src="assets/textures/brick_bump.jpg" position="-5 5 -2" width="1" color="#F16745"></a-box>
-      <a-box id="box" position="0 2 0" height="2" color="#FFC65D"></a-box>
+      <a-box id="aBox" position="0 2 0" height="2" color="#FFC65D"></a-box>
 
       <!-- Models. -->
       <a-entity id="crate" geometry="primitive: box" material="src: #crateImg" position="3 4 0"></a-entity>
