--- a/examples/360video.html
+++ b/examples/360video.html
@@ -22,7 +22,7 @@
                loop
                crossorigin="anonymous"
                playsinline webkit-playsinline
-               src="https://bitmovin-a.akamaihd.net/content/playhouse-vr/progressive.mp4">
+               src="https://cdn.bitmovin.com/content/assets/playhouse-vr/progressive.mp4">
         </video>
       </a-assets>
       <a-videosphere
