Reformat other examples, fix aframe master url, update to environment 1.4.0

--- a/examples/colors.html
+++ b/examples/colors.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Example Scene</title>
-    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe/dist/aframe-master.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
   </head>
   <body>
     <a-scene debug="true">
-      <a-entity id="hsl-green" geometry="primitive: box" material="color:hsl(120, 100%, 75%)" position="-4 1 0"></a-entity>
-      <a-entity id="rgb-yellow" geometry="primitive: box" material="color:rgb(255, 255, 0)" position="-2 1 0"></a-entity>
-      <a-entity id="hex3-red" geometry="primitive: box" material="color:#f00" position="0 1 0"></a-entity>
-      <a-entity id="hex6-red" geometry="primitive: box" material="color:#ff0000" position="2 1 0"></a-entity>
-      <a-entity id="string-blue" geometry="primitive: box" material="color:blue" position="4 1 0"></a-entity>
+      <a-entity id="hsl-green" geometry="primitive: box" material="color: hsl(120, 100%, 75%)" position="-4 1 0"></a-entity>
+      <a-entity id="rgb-yellow" geometry="primitive: box" material="color: rgb(255, 255, 0)" position="-2 1 0"></a-entity>
+      <a-entity id="hex3-red" geometry="primitive: box" material="color: #f00" position="0 1 0"></a-entity>
+      <a-entity id="hex6-red" geometry="primitive: box" material="color: #ff0000" position="2 1 0"></a-entity>
+      <a-entity id="string-blue" geometry="primitive: box" material="color: blue" position="4 1 0"></a-entity>
     </a-scene>
     <script src="../dist/aframe-inspector.js"></script>
   </body>
