--- a/examples/controllers.html
+++ b/examples/controllers.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Controllers</title>
-    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe/dist/aframe-master.min.js"></script>
-    <script src="https://unpkg.com/aframe-environment-component@1.3.7/dist/aframe-environment-component.min.js"></script>
-    <script src="https://unpkg.com/aframe-teleport-controls@0.2.0/dist/aframe-teleport-controls.min.js"></script>
-    <script src="https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-component.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.4.0/dist/aframe-environment-component.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aframe-blink-controls/dist/aframe-blink-controls.min.js"></script>
+    <script src="https://unpkg.com/aframe-event-set-component@5.0.0/dist/aframe-event-set-component.min.js"></script>
   </head>
   <body>
     <a-scene>
@@ -23,8 +23,8 @@
           event-set__mouseenter="_event: mouseenter; material.opacity: 0.75"
           event-set__mouseleave="_event: mouseleave; material.opacity: 1"
           event-set__click="_event: click; scale: 1.1 1.1 1.1"></a-mixin>
-        <img id="crateImg" src="https://aframe.io/sample-assets/assets/images/wood/crate.gif" crossOrigin="true">
-        <img id="floorImg" src="https://aframe.io/sample-assets/assets/images/terrain/grasslight-big.jpg" crossOrigin="true">
+        <img id="crateImg" src="https://aframe.io/sample-assets/assets/images/wood/crate.gif" crossorigin="true">
+        <img id="floorImg" src="https://aframe.io/sample-assets/assets/images/terrain/grasslight-big.jpg" crossorigin="true">
       </a-assets>
 
       <a-entity id="environment" environment="preset: forest; fog: 0"></a-entity>
@@ -37,7 +37,7 @@
         <a-entity id="redBox" mixin="interactable" geometry="primitive: box" material="color: #F00" position="-4 1 0">
           <a-animation attribute="rotation" to="0 360 0" repeat="indefinite" easing="linear" dur="9600"></a-animation>
         </a-entity>
-        <a-entity id="yellowSphere" mixin="interactable" geometry="primitive: sphere" material="color:#ff0; metalness:0.0; roughness:1.0" position="-2 2 -2"></a-entity>
+        <a-entity id="yellowSphere" mixin="interactable" geometry="primitive: sphere" material="color: #ff0; roughness: 1" position="-2 2 -2"></a-entity>
         <a-box id="brickBox" mixin="interactable" src="https://aframe.io/sample-assets/assets/images/bricks/brick_bump.jpg" position="-5 5 -2" width="1" color="#F16745"></a-box>
         <a-box id="aBox" mixin="interactable" position="0 2 0" height="2" color="#FFC65D"></a-box>
 
@@ -50,9 +50,13 @@
       <!-- Lights. -->
       <a-entity id="pointLight" light="type: point; intensity: 0.25" position="0 3 3"></a-entity>
 
-      <!-- Hands. -->
-      <a-entity id="rightHand" laser-controls="hand: right"></a-entity>
-      <a-entity id="leftHand" hand-controls="left" teleport-controls></a-entity>
+      <a-entity id="rig">
+        <a-entity id="player" camera position="0 1.6 0" look-controls></a-entity>
+        <!-- Hands. -->
+        <a-entity id="rightHand" laser-controls="hand: right"></a-entity>
+        <a-entity id="leftHand" hand-controls="hand: left"
+                  blink-controls="rotateOnTeleport: false; cameraRig: #rig; teleportOrigin: #player; collisionEntities: .environmentGround"></a-entity>
+      </a-entity>
     </a-scene>
 
     <script src="../dist/aframe-inspector.js"></script>
