--- a/examples/empty.html
+++ b/examples/empty.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Example Scene</title>
-    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe/dist/aframe-master.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
   </head>
   <body>
     <a-scene stats>
     </a-scene>
-    <script src="http://localhost:3333/dist/aframe-inspector.js"></script>
+    <script src="../dist/aframe-inspector.js"></script>
   </body>
 </html>
