--- a/examples/index.html
+++ b/examples/index.html
@@ -5,7 +5,7 @@
     <title>Example Scene</title>
     <!--<script>window.AFRAME_SAMPLE_ASSETS_ROOT = "./sample-assets/";</script>-->
     <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@master/dist/aframe-master.min.js"></script>
-    <script src="https://unpkg.com/aframe-environment-component@1.3.7/dist/aframe-environment-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.4.0/dist/aframe-environment-component.min.js"></script>
   </head>
   <body>
     <a-scene debug="true">
@@ -23,7 +23,7 @@
         <img id="floorImg" src="https://aframe.io/sample-assets/assets/images/terrain/grasslight-big.jpg" crossorigin="true">
       </a-assets>
 
-      <a-entity id="environment" environment="preset: forest"></a-entity>
+      <a-entity id="environment" environment="preset: forest; fog: 0"></a-entity>
 
       <!-- Meshes. -->
       <a-entity id="aBlueBox" mixin="blueBox" position="0 8 0"></a-entity>
