--- a/examples/controllers.html
+++ b/examples/controllers.html
@@ -7,6 +7,7 @@
     <script src="https://unpkg.com/aframe-environment-component@1.4.0/dist/aframe-environment-component.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe-blink-controls/dist/aframe-blink-controls.min.js"></script>
     <script src="https://unpkg.com/aframe-event-set-component@5.x.x/dist/aframe-event-set-component.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.5.2/dist/aframe-extras.controls.min.js"></script>
   </head>
   <body>
     <a-scene>
@@ -48,7 +49,7 @@
       <!-- Lights. -->
       <a-entity id="pointLight" light="type: point; intensity: 0.25" position="0 3 3"></a-entity>
 
-      <a-entity id="rig">
+      <a-entity id="rig" movement-controls>
         <a-entity id="player" camera position="0 1.6 0" look-controls></a-entity>
         <!-- Hands. -->
         <a-entity id="rightHand" laser-controls="hand: right"></a-entity>
