--- a/examples/360video.html
+++ b/examples/360video.html
@@ -22,7 +22,7 @@
                loop
                crossorigin="anonymous"
                playsinline webkit-playsinline
-               src="https://bitmovin-a.akamaihd.net/content/playhouse-vr/progressive.mp4">
+               src="https://cdn.bitmovin.com/content/assets/playhouse-vr/progressive.mp4">
         </video>
       </a-assets>
       <a-videosphere
@@ -33,9 +33,9 @@
       <a-camera>
         <a-entity
           position="0 0 -1.5"
-          text="align:center;
-                width:6;
-                wrapCount:100;
+          text="align: center;
+                width: 6;
+                wrapCount: 100;
                 color: white;
                 value: Click or tap to start video"
           hide-on-play="#video">
